# wasm-glfw3-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  glwasm.cpp  vcpkg.json  view.cpp
include/: glfw3renderer.h  glwasm.h  view.h
src/: glfw3renderer.cpp  glwasm.cpp  view.cpp
